Fix timeline cards text alignment for better visibility

--- a/css/style.css
+++ b/css/style.css
@@ -2679,12 +2679,13 @@ button {
 .timeline-item:nth-child(odd) .timeline-content {
     margin-left: auto;
     padding-left: 50px;
+    text-align: left;
 }
 
 .timeline-item:nth-child(even) .timeline-content {
     margin-right: auto;
     padding-right: 50px;
-    text-align: right;
+    text-align: left;
 }
 
 /* Timeline Card */
